commented properties related to z-index and transform for scrollbar bug

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -146,8 +146,8 @@ nav {
     display: flex;
     justify-content: center;
     gap: 4rem;
-    transform: perspective(500px) rotateX(15deg);
-    z-index: 1;
+    /* transform: perspective(500px) rotateX(15deg);
+    z-index: 1; */
 }
 
 nav button {
